WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106404
border-radius with box-shadow is not rendered correctly
https://bugs.webkit.org/show_bug.cgi?id=106404
Summary
border-radius with box-shadow is not rendered correctly
Takashi Sakamoto
Reported
2013-01-08 18:57:16 PST
Reported by
http://code.google.com/p/chromium/issues/detail?id=162371
The URL's div should have rounded top-left and top-right border, but doesn't have.
Attachments
Patch
(8.04 KB, patch)
2013-01-08 20:39 PST
,
Takashi Sakamoto
no flags
Details
Formatted Diff
Diff
Patch
(7.80 KB, patch)
2013-01-08 22:46 PST
,
Takashi Sakamoto
no flags
Details
Formatted Diff
Diff
Patch
(62.38 KB, patch)
2013-01-09 03:41 PST
,
Takashi Sakamoto
no flags
Details
Formatted Diff
Diff
Patch
(7.79 KB, patch)
2013-01-09 16:28 PST
,
Takashi Sakamoto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Takashi Sakamoto
Comment 1
2013-01-08 20:39:21 PST
Created
attachment 181834
[details]
Patch
Hajime Morrita
Comment 2
2013-01-08 21:08:42 PST
Comment on
attachment 181834
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181834&action=review
> LayoutTests/fast/borders/border-radius-with-box-shadow-expected.txt:1 > +layer at (0,0) size 800x600
We don't need render tree dump. Use dumpAsText(true)
Takashi Sakamoto
Comment 3
2013-01-08 22:46:03 PST
Created
attachment 181850
[details]
Patch
Takashi Sakamoto
Comment 4
2013-01-08 22:48:16 PST
Comment on
attachment 181834
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181834&action=review
Thank you for reviewing.
>> LayoutTests/fast/borders/border-radius-with-box-shadow-expected.txt:1 >> +layer at (0,0) size 800x600 > > We don't need render tree dump. Use dumpAsText(true)
Yeah. I found typos, testRunnder. I fixed the typos and removed render tree dump.
Takashi Sakamoto
Comment 5
2013-01-09 03:41:45 PST
Created
attachment 181891
[details]
Patch
Takashi Sakamoto
Comment 6
2013-01-09 03:43:03 PST
I rebased platform/chromium-linux/fast/borders/mixed-border-styles-radius-expected.png.
WebKit Review Bot
Comment 7
2013-01-09 04:22:00 PST
Comment on
attachment 181891
[details]
Patch Rejecting
attachment 181891
[details]
from commit-queue. New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html Full output:
http://queues.webkit.org/results/15758495
Takashi Sakamoto
Comment 8
2013-01-09 16:28:34 PST
Created
attachment 182006
[details]
Patch
WebKit Review Bot
Comment 9
2013-01-09 16:46:20 PST
Comment on
attachment 182006
[details]
Patch Clearing flags on attachment: 182006 Committed
r139256
: <
http://trac.webkit.org/changeset/139256
>
WebKit Review Bot
Comment 10
2013-01-09 16:46:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug