border-radius with box-shadow is not rendered correctly https://bugs.webkit.org/show_bug.cgi?id=106404

Reviewed by Hajime Morita.

Source/WebCore:

RoundedRect::isRenderable is wrong. So RoundedRect::adjustRadii
is invoked for renderable RoundedRects.

Test: fast/borders/border-radius-with-box-shadow.html

* platform/graphics/RoundedRect.cpp:
(WebCore::RoundedRect::isRenderable):
Have to compare topLeft's height plus bottomLeft's height with
rect's height and to compare topRight's height plus bottomRight's
height with rect's height.

LayoutTests:

* fast/borders/border-radius-with-box-shadow-expected.txt: Added.
* fast/borders/border-radius-with-box-shadow.html: Added.
* platform/chromium-linux/fast/borders/border-radius-with-box-shadow-expected.png: Added.


Canonical link: https://commits.webkit.org/124705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139256 268f45cc-cd09-0410-ab3c-d52691b4dbfc