Source/WebCore/platform/graphics/RoundedRect.cpp
@@ -158,8 +158,8 @@ bool RoundedRect::isRenderable() const
 {
     return m_radii.topLeft().width() + m_radii.topRight().width() <= m_rect.width()
         && m_radii.bottomLeft().width() + m_radii.bottomRight().width() <= m_rect.width()
-        && m_radii.topLeft().height() + m_radii.topRight().height() <= m_rect.height()
-        && m_radii.bottomLeft().height() + m_radii.bottomRight().height() <= m_rect.height();
+        && m_radii.topLeft().height() + m_radii.bottomLeft().height() <= m_rect.height()
+        && m_radii.topRight().height() + m_radii.bottomRight().height() <= m_rect.height();
 }
 
 void RoundedRect::adjustRadii()
